apps/edge-services/atuin/manifests/atuin-external.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: atuin-external
  namespace: edge-services
  labels:
    external-dns.edgard.org/scope: external
spec:
  parentRefs:
    - name: external
      namespace: platform-system
      sectionName: https
  hostnames:
    - atuin.edgard.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: atuin
          port: 8888
