apps/edge-services/atuin/manifests/atuin-internal.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: atuin-internal
  namespace: edge-services
  labels:
    external-dns.edgard.org/scope: internal
spec:
  parentRefs:
    - name: envoy-gateway-internal
      namespace: platform-system
      sectionName: https
  hostnames:
    - atuin.edgard.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: atuin
          port: 8888
